src/test/ui/unboxed-closures/issue-30904.stderr
error[E0308]: mismatched types
  --> $DIR/issue-30904.rs:20:45
   |
LL |     let _: for<'a> fn(&'a str) -> Str<'a> = Str;
   |                                             ^^^ expected concrete lifetime, found bound lifetime parameter 'a
   |
   = note: expected type `for<'a> fn(&'a str) -> Str<'a>`
              found type `fn(&str) -> Str<'_> {Str::<'_>}`

error[E0631]: type mismatch in function arguments
  --> $DIR/issue-30904.rs:26:10
   |
LL | fn test<F: for<'x> FnOnce<(&'x str,)>>(_: F) {}
   |    ----    -------------------------- required by this bound in `test`
...
LL | struct Str<'a>(&'a str);
   | ------------------------ found signature of `fn(&str) -> _`
...
LL |     test(Str);
   |          ^^^ expected signature of `for<'x> fn(&'x str) -> _`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
